Added some changes for the retrieving orders

--- a/WebApiDemo.Web/app/purchase/newOrder.html
+++ b/WebApiDemo.Web/app/purchase/newOrder.html
@@ -9,7 +9,7 @@
                             <i class="icon-bar"></i>Save
                         </button>&nbsp;&nbsp;
 
-                        Customer name:<input ng-model="vm.order.customer" placeholder="Customer Name..."/>
+                        Customer name:<input ng-model="vm.order.customer" autofocus="true" placeholder="Customer Name..."/>
                         Order date:{{vm.order.orderDate | date:'medium'}}
                         <hr/>
                         <div class="col-md-6">
