--- a/WebApiDemo.Web/index.html
+++ b/WebApiDemo.Web/index.html
@@ -87,6 +87,7 @@
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
     <script src="app/purchase/newOrder.js"></script>
+    <script src="app/purchase/orderManager.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
